# rpkg-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: extract_from_resource_package.rs  extract_from_resource_partition.rs  extract_resource.rs  mount_game_files.rs  parse_path_list.rs  print_packagedefs.rs  rebuild_game.rs  test.rs
src/: lib.rs  main.rs  package_definitions.rs  package_manager.rs  partition_manager.rs  resource.rs  resource_container.rs  resource_id.rs  resource_index.rs  resource_package.rs  resource_partition.rs  runtime_resource_id.rs  thumbs.rs  utils.rs
src/encryption/: md5_engine.rs  mod.rs  xtea.rs
src/libs/hitman-xtea/: CHANGES.md  Cargo.toml  README.md
src/libs/hitman-xtea/src/: lib.rs
src/misc/: hash_path_list.rs  ini_file.rs  ini_file_system.rs  mod.rs  resource_id.rs
src/resource/: mod.rs  package_builder.rs  partition_manager.rs  resource_info.rs  resource_package.rs  resource_partition.rs  runtime_resource_id.rs
src/resource/legacy/: cl534170.rs  mod.rs
src/resource/pdefs/: bond_parser.rs  h2016_parser.rs  hm2_parser.rs  hm3_parser.rs  mod.rs
src/runtime/resource/: mod.rs  package_manager.rs  partition_manager.rs  resource_container.rs  resource_index.rs  resource_info.rs  resource_package.rs  resource_partition.rs  runtime_resource_id.rs
src/runtime/resource/package_defs/: h2016_parser.rs  hm2_parser.rs  hm3_parser.rs  mod.rs
tests/: builder_tests.rs  game_tests.rs  xtea_tests.rs
