[package]
name = "rpkg-rs"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
categories = ["game-development", "data-structures", "parser-implementations"]
keywords = ["game-archive", "hitman", "glacier", "rpkg", "modding"]
description = "Parse Glacier ResourcePackage (rpkg) files, allowing access to the resources stored within."
repository = "https://github.com/dafitius/rpkg-rs"
readme = "README.md"

[badges.maintenance]
status = "actively-developed"

[dependencies]
binrw = "0.14.1"
bitfield-struct = "0.10.1"
memmap2 = "0.9.5"
lazy-regex = "3.4.1"
lzzzz = "2.0.0"
pathdiff = "0.2.1"
itertools = { version = "0.14.0", features = [] }
thiserror = "2.0.11"
md-5 = "0.10.6"
extended-tea = "0.1.1"
byteorder = "1.5.0"
rayon = { version = "1.10.0", optional = true}
serde = { version = "1.0.217", optional = true, features = ["derive"] }
serde-hex = { version = "0.1.0", optional = true }
indexmap = "2.10.0"
crc32fast = "1.4.2"
async-trait = { version = "0.1.88", optional = true}
glacier-ini = {git="https://github.com/dafitius/GlacierFormats-rs"}


[features]
default = ["rayon", "path-list", "serde"]
path-list = ["dep:rayon"]
serde = ["dep:serde", "dep:serde-hex"]
rayon = ["dep:rayon"]

[dev-dependencies]
serde_json = "1.0.128"
version-sync = "0.9.5"
tempfile = "3.12.0"

